--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/codifyme/Liri-Node-App/issues"
   },
-  "homepage": "https://github.com/codifyme/Liri-Node-App#readme"
+  "homepage": "https://github.com/codifyme/Liri-Node-App#readme",
+  "dependencies": {
+    "axios": "^0.19.0"
+  }
 }
